Build related fixes for jdk 11.0.4+
* added missing module descriptors
* fixed missing exports/services in existing module descriptors
* removed usage of maven-shade-plugin
* put codemodel, xsom, rngom, relaxng-datatype back to the main build
* fixed old com.sun.xml.bind bundles to really be what they used to be in the past
* fixed compile errors (clash between class name and package name - JLS 7.1)
* fixed dependencies
* put spotbugs and copyright-check back
* fixed few copyrights
* fixed entries in bundles' manifest file
* removed emtpy files
* slightly simplified poms

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>